--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.0
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,6 +76,14 @@ flutter:
       - assets/load_img1.png
       - assets/load_img2.png
       - assets/load_img3.png
+      - assets/login_img.png
+      - assets/login_img2.png
+      - assets/login_img3.png
+      - assets/login_img4.png
+      - assets/login_back.png
+      - assets/google_icon.png
+      - assets/facebook.png
+     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
