--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.0
   shared_preferences: ^2.2.2
+  google_fonts: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -85,6 +86,11 @@ flutter:
       - assets/login_back.png
       - assets/google_icon.png
       - assets/facebook.png
+      - assets/tab_img.png
+      - assets/tab_img2.png
+      - assets/tab_img3.png
+      - assets/featured_img.png
+      
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
