all tab changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,18 @@ flutter:
       - assets/tab_img2.png
       - assets/tab_img3.png
       - assets/featured_img.png
+      - assets/featured_img2.png
+      - assets/featured_img3.png
+      - assets/varkala.jpg
+      - assets/chennai.jpg
+      - assets/ooty.jpg
+      - assets/kovai.jpg
+      - assets/cochin.jpg
+      - assets/person1.png
+      - assets/person2.png
+      - assets/person3.png
+      - assets/person4.png
+      - assets/person5.png
       
      
 
