nearest estate  add to add

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,10 @@ flutter:
       - assets/person3.png
       - assets/person4.png
       - assets/person5.png
+      - assets/nearby1.png
+      - assets/nearby2.png
+      - assets/nearby3.png
+      - assets/nearby4.png
       
      
 
