--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_screenutil: ^5.9.0
   shared_preferences: ^2.2.2
   google_fonts: ^6.1.0
+  share_plus: ^7.2.0
+  google_maps_flutter: ^2.5.0
+  geocoding: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -106,6 +109,7 @@ flutter:
       - assets/nearby2.png
       - assets/nearby3.png
       - assets/nearby4.png
+      - assets/coupan.png
       
      
 
