--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   share_plus: ^7.2.0
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.0
+  geolocator: ^11.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
