agent page ongoing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,8 @@ flutter:
       - assets/person3.png
       - assets/person4.png
       - assets/person5.png
+      - assets/person_javi.jpeg
+
       - assets/nearby1.png
       - assets/nearby2.png
       - assets/nearby3.png
