Add composite custom marker and search fixes
Create a composite map marker using a marker asset and centered profile (assets/user.png) and wire it into the search UI. Replaced the old loadCustomMarker with markerWithCenterImage that composes images via dart:ui and returns a BitmapDescriptor. Updated search behavior to validate input, place a single marker with the composed icon, animate the camera, and trigger search from the text field suffix icon. Minor UI/logic tweaks: commented out unused nearby/count calls in Searchpage.dart, changed markerId for single search result, ensure map refresh when applying filters, and added assets/user.png to pubspec.yaml.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -145,6 +145,7 @@ flutter:
       - assets/fav_icon.png
       - assets/Vector.png
       - assets/resultnotfound.png
+      - assets/user.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
