--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -146,6 +146,7 @@ flutter:
       - assets/Vector.png
       - assets/resultnotfound.png
       - assets/user.png
+      - assets/chat.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
