--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.0
   geolocator: ^11.0.0
+  http: ^0.13.6
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
