Add star rating UI, map fixes, and asset
Add a star asset and register it in pubspec; update sample property rating in Alltab.

Property details changes:
- Collect nearby results by adding matching items to finalResults.
- Parse property rating to a double for use in the UI.
- Improve typography by increasing several font weights to w700.
- Fix route/destination handling: set destination variable, update routePoints to use destination, and construct LatLngBounds with the destination to avoid null issues.
- Render destination marker only when available and tidy marker widget structure; use the selectedPlaceType to show an appropriate icon.
- Rework cost display to show price + "/month" styling and add a short explanatory line about average spend.
- Add a Reviews section that displays the star asset and a dynamic 5-star row (filled, half, or border) based on the parsed rating.

Also includes small formatting/spacing cleanups.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -155,6 +155,8 @@ flutter:
       - assets/resultnotfound.png
       - assets/user.png
       - assets/chat.png
+      - assets/star.png
+      
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
