Add reviews UI and assets, update details screen
Add two new image assets and register them in pubspec.yaml; update lib/screens/property_details/property_details.dart to overhaul the rating/reviews section. Changes include: simplified rating parsing, replaced the previous LayoutBuilder star rendering with explicit star icons and rating text, added an overlapping avatar stack, and multiple review entry blocks (avatars, names, star rows, review text and timestamps). Also adjusted paddings, alignment and sizing to fit the new review layout.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -156,6 +156,9 @@ flutter:
       - assets/user.png
       - assets/chat.png
       - assets/star.png
+      - assets/review_icon.png
+      - assets/reviews_img1.png
+
       
 
 
